allow create serviceaccount

--- a/operations/helm/tempo-microservices/templates/deployment-compactor.yaml
+++ b/operations/helm/tempo-microservices/templates/deployment-compactor.yaml
@@ -36,6 +36,11 @@ spec:
         volumeMounts:
         - mountPath: /conf
           name: tempo-conf
+      {{- with .Values.compactor }}
+      {{- if .serviceAccountName }}
+      serviceAccountName: {{ .serviceAccountName }}
+      {{- end }}
+      {{- end }}
       volumes:
       - configMap:
           name: tempo-compactor
