--- a/operations/helm/tempo-microservices/templates/deployment-querier.yaml
+++ b/operations/helm/tempo-microservices/templates/deployment-querier.yaml
@@ -38,6 +38,11 @@ spec:
         volumeMounts:
         - mountPath: /conf
           name: tempo-conf
+      {{- with .Values.querier }}
+      {{- if .serviceAccountName }}
+      serviceAccountName: {{ .serviceAccountName }}
+      {{- end }}
+      {{- end }}
       volumes:
       - configMap:
           name: tempo-querier
