--- a/operations/helm/tempo-microservices/templates/statefulset-ingester.yaml
+++ b/operations/helm/tempo-microservices/templates/statefulset-ingester.yaml
@@ -35,6 +35,11 @@ spec:
           name: tempo-conf
         - mountPath: /var/tempo
           name: ingester-data
+      {{- with .Values.ingester }}
+      {{- if .serviceAccountName }}
+      serviceAccountName: {{ .serviceAccountName }}
+      {{- end }}
+      {{- end }}
       volumes:
       - configMap:
           name: tempo
