--- a/operations/helm/tempo-microservices/templates/configmap-tempo-compactor.yaml
+++ b/operations/helm/tempo-microservices/templates/configmap-tempo-compactor.yaml
@@ -15,7 +15,7 @@ data:
         abort_if_cluster_join_fails: false
         bind_port: 7946
         join_members:
-          - gossip-ring.default.svc.cluster.local:7946
+          - gossip-ring.tracing.svc.cluster.local:7946
     server:
         http_listen_port: 3100
     storage:
