--- a/operations/helm/tempo-microservices/templates/configmap-tempo-querier.yaml
+++ b/operations/helm/tempo-microservices/templates/configmap-tempo-querier.yaml
@@ -12,7 +12,7 @@ data:
         abort_if_cluster_join_fails: false
         bind_port: 7946
         join_members:
-          - gossip-ring.default.svc.cluster.local:7946
+          - gossip-ring.tracing.svc.cluster.local:7946
     overrides:
         per_tenant_override_config: /conf/overrides.yaml
     server:
