--- a/operations/helm/tempo-microservices/templates/configmap-tempo-querier.yaml
+++ b/operations/helm/tempo-microservices/templates/configmap-tempo-querier.yaml
@@ -7,7 +7,7 @@ data:
     auth_enabled: false
     querier:
         frontend_worker:
-            frontend_address: query-frontend-discovery.default.svc.cluster.local:9095
+            frontend_address: query-frontend-discovery.tracing.svc.cluster.local:9095
     memberlist:
         abort_if_cluster_join_fails: false
         bind_port: 7946
