--- a/operations/helm/tempo-microservices/templates/deployment-distributor.yaml
+++ b/operations/helm/tempo-microservices/templates/deployment-distributor.yaml
@@ -33,6 +33,13 @@ spec:
           name: opencensus
         - containerPort: 14268
           name: jaeger-http
+        - containerPort: 9411
+          name: zipkin-http
+        - containerPort: 14250
+          name: jaeger-grpc
+        - containerPort: 55680
+          name: oltp-http
+
         resources:
           {{- toYaml .Values.distributor.resources | nindent 10 }}
         volumeMounts:
