--- a/operations/helm/tempo-microservices/templates/serviceaccount.yaml
+++ b/operations/helm/tempo-microservices/templates/serviceaccount.yaml
@@ -10,3 +10,7 @@ metadata:
   {{- end }}
 {{- end }}
 {{- end }}
+{{- if .Values.imagePullSecrets }}
+imagePullSecrets:
+  {{ toYaml .Values.imagePullSecrets }}
+{{- end }}
