use the same SA

--- a/operations/helm/tempo-microservices/templates/statefulset-memcached.yaml
+++ b/operations/helm/tempo-microservices/templates/statefulset-memcached.yaml
@@ -47,5 +47,10 @@ spec:
         ports:
         - containerPort: 9150
           name: http-metrics
+      {{- with .Values.memcached }}
+      {{- if .serviceAccountName }}
+      serviceAccountName: {{ .serviceAccountName }}
+      {{- end }}
+      {{- end }}
   updateStrategy:
     type: RollingUpdate
