--- a/operations/helm/tempo-microservices/templates/statefulset-ingester.yaml
+++ b/operations/helm/tempo-microservices/templates/statefulset-ingester.yaml
@@ -56,5 +56,6 @@ spec:
       - ReadWriteOnce
       resources:
         requests:
-          storage: 5Gi
-      storageClassName: local-path
+          storage: {{ .Values.storage.capacity }}
+      storageClassName: {{ .Values.storage.storageClassName }}
+
