Increase ingestion_burst_size

--- a/operations/helm/tempo-microservices/templates/configmap-tempo.yaml
+++ b/operations/helm/tempo-microservices/templates/configmap-tempo.yaml
@@ -7,6 +7,8 @@ data:
     overrides:
       limits:
         max_traces_per_user: 50000
+        ingestion_rate_limit: 100000
+        ingestion_burst_size: 155000
   tempo.yaml: |
     auth_enabled: false
     compactor: null
