--- a/operations/helm/tempo-microservices/templates/configmap-tempo.yaml
+++ b/operations/helm/tempo-microservices/templates/configmap-tempo.yaml
@@ -6,7 +6,8 @@ data:
   overrides.yaml: |
     overrides:
       limits:
-        max_traces_per_user: 60000
+        max_traces_per_user: 20000
+        max_global_traces_per_user: 20000
         ingestion_rate_limit: 100000
         ingestion_burst_size: 155000
   tempo.yaml: |
