Increase parallelism for query_fe -> querier flow (see grpc "pull mode")

--- a/operations/helm/tempo-microservices/templates/configmap-tempo-querier.yaml
+++ b/operations/helm/tempo-microservices/templates/configmap-tempo-querier.yaml
@@ -12,6 +12,7 @@ data:
                 max_recv_msg_size: 104857600
                 # max_send_msg_size: 16777216
                 max_send_msg_size: 177812350
+            parallelism: 4
             #    # max_send_msg_size: 33554432
         # max_concurrent_queries: 10
         # query_timeout: 20
